Se agrega cambio de gif en AceleraeCarro, ademas se agrega sonido para los accidentes